---
source: spade-tests/src/typeinference.rs
---
entity main(a: int<14>, b: int<16>) -> int<32> {
    a * b
}


error: Type error
  ┌─ testinput:1:48
  │  
1 │   entity main(a: int<14>, b: int<16>) -> int<32> {
  │                                          ------- int<32> type specified here
  │ ╭────────────────────────────────────────────────^
2 │ │     a * b
3 │ │ }
  │ ╰─^ Found type int<30>
  │  
  = note: Expected: 32
                in: int<32>
               Got: 30
                in: int<30>


